[package]
name = "bitut"
description = "simple bit manipulation utilities"
version = "0.2.1"
edition = "2021"
authors = ["vxpm"]
license = "Apache-2.0"
readme = "README.md"
keywords = ["bit", "bits", "util", "utils"]
categories = ["no-std"]
repository = "https://github.com/vxpm/bitut"

[features]
default = []
const_impl = []
